src/hotspot/os_cpu/bsd_x86/vm_version_bsd_x86.cpp
@@ -24,7 +24,7 @@
 
 #include "precompiled.hpp"
 #include "runtime/os.hpp"
-#include "vm_version_x86.hpp"
+#include "runtime/vm_version.hpp"
 
 #ifdef __APPLE__
 
